Fix overflow issue on timeline

--- a/src/components/PeopleTimeline/PeopleTimeline.css
+++ b/src/components/PeopleTimeline/PeopleTimeline.css
@@ -1,19 +1,18 @@
 @import '../variables.css';
 
 .root {
-  /*overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  margin-right: 2rem;
+  /* overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
-  width: 100vw;*/
+  width: 100vw; */
 }
 
 .grid {
   position: relative;
   padding: 1rem;
   box-sizing: border-box;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
   width: 100vw;
 }
 
